clusters/homelab/apps/istio/gw-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: istio-ingress
spec:
  gatewayClassName: istio
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: 192.168.100.15
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.${cluster_subdomain}"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.${cluster_subdomain}"
      tls:
        certificateRefs:
          - kind: Secret
            group: ""
            name: wildcard-ingress-tls-secret
            namespace: cert-manager
      allowedRoutes:
        namespaces:
          from: All
