clusters/homelab/apps/istio/rm-gw-external.yaml
$patch: delete
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  namespace: istio-ingress
