clusters/homelab/apps/istio/rm-gw-internal.yaml
$patch: delete
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: istio-ingress
