clusters/homelab/apps/istio/rm-objects.yaml
$patch: delete
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  namespace: istio-ingress
---
$patch: delete
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: istio-ingress
